<resources>
	<string name="app_name">AcademyTlvMovies</string>
	<string name="app_title">Android Academy Fundamentals Course 2019</string>

	<string name="title">Android Academy Fundamentals Course 2018</string>
	<string name="infinity_war_title">Avengers: Infinity War</string>
	<string name="infinity_war_release_date">2018-04-25</string>
	<string name="infinity_war_overview">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
	<string name="infinity_war_trailer">https://www.youtube.com/watch?v=6ZfuNTqbHE8</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="details_release_text">Released: </string>
    <string name="details_trailer_text">Movie Trailer</string>
    <string name="details_overview_text">Overview: </string>

	<string name="title_activity_async_task">AsyncTaskActivity</string>

	<string name="async_task_activity">This is AsyncTask Activity</string>
	<string name="handler_exe_activity">This is Thread Handler Activity</string>
	<string name="btn_create">Create</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_start">Start</string>
	<string name="msg_oncreate">Async Task created</string>
	<string name="msg_onstart">Async Task Started</string>
	<string name="msg_oncancel">Async Task cancelled</string>
	<string name="msg_thread_oncreate">Thread Task created</string>
	<string name="msg_thread_onstart">Thread Task Started</string>
	<string name="msg_thread_oncancel">Thread Task cancelled</string>
	<string name="msg_preexecute">Pre execute run</string>
	<string name="msg_postexecute">Post execute run</string>
	<string name="msg_should_create_task">must click \"create\" task first</string>
	<string name="done">Done!</string>
	<string name="title_activity_threads">ThreadsActivity</string>
    <string name="open_async_task_activity">Open Async Task Activity</string>
    <string name="open_thread_handler_activity">Open Thread Handler Activity</string>

	<string name="starting_intent_service_msg">Starting IntentService</string>
	<string name="finishing_intent_service_msg">Finishing IntentService</string>
	<string name="starting_hardjob_service_msg">Starting Hard Job Service</string>
	<string name="finishing_hardjob_service_msg">Finishing Hard Job Service, id: %1$d</string>
	<string name="start_intent_service">Start IntentService</string>
	<string name="start_service">Start Service</string>
	<string name="the_progress">The progress</string>
	<string name="open_background_service_activity">Open Background Service Activity</string>

	<string name="open_worker_activity">Open WorkerManager Activity</string>
	<string name="worker_title_progress">Worker progress</string>
	<string name="worker_enqueue_work">Enqueue Work</string>
	<string name="worker_cancel_work">Cancel Work</string>
	<string name="worker_work_done">Work Done</string>
	<string name="starting_worker_msg">Starting Work</string>
	<string name="finishing_worker_msg">Finishing Work</string>
	<string name="worker_failure_msg">Work failure</string>
	<string name="worker_constraint_network">Required Network</string>
	<string name="worker_constraint_charging">Requires Charging</string>
	<string name="worker_constraint_battery">Requires Battery Not Low</string>

    <string name="something_went_wrong">Something went wrong :\</string>
	<string name="details_loading_trailer_text">Loading…</string>

	<string name="notification_title">Downloading…</string>
	<string name="notification_message">%1$d %%</string>
	<string name="channel_name">Default channel</string>
	<string name="channel_description">It is a channel for default notifications</string>

	<string name="download_dialog_title">Permission needed</string>
	<string name="download_dialog_message">To be able downloading requested file the app need to be granted to access your files</string>
	<string name="download_dialog_ok">OK</string>
	<string name="download_dialog_cancel">Cancel</string>
	<string name="download_image_description">Main image</string>
    <string name="desc_main_image">Main image</string>
	<string name="desc_button_download">Button download</string>
	<string name="desc_movie_image">Movie image</string>

</resources>
