<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackgroundServices.BGServiceActivity">

<Button
    android:id="@+id/btn_start_service"
    android:layout_width="160dp"
    android:layout_height="70dp"
    android:layout_marginBottom="72dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/start_service"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn_start_intent_service"
    />

<Button
    android:id="@+id/btn_start_intent_service"
    android:layout_width="160dp"
    android:layout_height="70dp"
    android:layout_marginBottom="72dp"
    android:text="@string/start_intent_service"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_start_service"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    />

<TextView
    android:id="@+id/tv_progress_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/the_progress"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.361"
    />
<TextView
    android:id="@+id/tv_progress_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="36dp"
    android:textSize="24sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_progress_title"
    tools:text="87%"
    />
<android.support.constraint.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="20dp"
    />

</android.support.constraint.ConstraintLayout>
